tools/analysis/test/cluster/ingress-lb-limit/cluster-dump/ingress-nginx/ingress-controller-ingress-nginx-controller-6d798895b8-zpt6q/logs.txt
==== START logs for container istio-init of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6d798895b8-zpt6q ====
Environment:
------------
ENVOY_PORT=
INBOUND_CAPTURE_PORT=
ISTIO_INBOUND_INTERCEPTION_MODE=
ISTIO_INBOUND_TPROXY_MARK=
ISTIO_INBOUND_TPROXY_ROUTE_TABLE=
ISTIO_INBOUND_PORTS=
ISTIO_OUTBOUND_PORTS=
ISTIO_LOCAL_EXCLUDE_PORTS=
ISTIO_SERVICE_CIDR=
ISTIO_SERVICE_EXCLUDE_CIDR=

Variables:
----------
PROXY_PORT=15001
PROXY_INBOUND_CAPTURE_PORT=15006
PROXY_TUNNEL_PORT=15008
PROXY_UID=1337
PROXY_GID=1337
INBOUND_INTERCEPTION_MODE=REDIRECT
INBOUND_TPROXY_MARK=1337
INBOUND_TPROXY_ROUTE_TABLE=133
INBOUND_PORTS_INCLUDE=
INBOUND_PORTS_EXCLUDE=15090,15021,80,443,15020
OUTBOUND_IP_RANGES_INCLUDE=*
OUTBOUND_IP_RANGES_EXCLUDE=
OUTBOUND_PORTS_INCLUDE=
OUTBOUND_PORTS_EXCLUDE=
KUBEVIRT_INTERFACES=
ENABLE_INBOUND_IPV6=false

Writing following contents to rules file:  /tmp/iptables-rules-1628150724930795464.txt693421094
* nat
-N ISTIO_INBOUND
-N ISTIO_REDIRECT
-N ISTIO_IN_REDIRECT
-N ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp --dport 15008 -j RETURN
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_OUTPUT -o lo -s 127.0.0.6/32 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d 127.0.0.1/32 -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d 127.0.0.1/32 -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d 127.0.0.1/32 -j RETURN
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
COMMIT

iptables-restore --noflush /tmp/iptables-rules-1628150724930795464.txt693421094
Writing following contents to rules file:  /tmp/ip6tables-rules-1628150725033481848.txt968670029

ip6tables-restore --noflush /tmp/ip6tables-rules-1628150725033481848.txt968670029
iptables-save 
# Generated by iptables-save v1.8.4 on Thu Aug  5 08:05:25 2021
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:ISTIO_INBOUND - [0:0]
:ISTIO_REDIRECT - [0:0]
:ISTIO_IN_REDIRECT - [0:0]
:ISTIO_OUTPUT - [0:0]
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp -m tcp --dport 15008 -j RETURN
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A ISTIO_OUTPUT -s 127.0.0.6/32 -o lo -j RETURN
-A ISTIO_OUTPUT ! -d 127.0.0.1/32 -o lo -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT ! -d 127.0.0.1/32 -o lo -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d 127.0.0.1/32 -j RETURN
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
COMMIT
# Completed on Thu Aug  5 08:05:25 2021
==== END logs for container istio-init of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6d798895b8-zpt6q ====
==== START logs for container controller of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6d798895b8-zpt6q ====
-------------------------------------------------------------------------------
NGINX Ingress controller
  Release:       0.46.0-20210510134749-abc2d2088
  Build:         git-abc2d2088
  Repository:    https://github.com/verrazzano/ingress-nginx.git
  nginx version: nginx/1.19.6

-------------------------------------------------------------------------------

I0805 08:05:41.937371       7 flags.go:208] "Watching for Ingress" class="nginx"
W0805 08:05:41.937510       7 flags.go:213] Ingresses with an empty class will also be processed by this Ingress controller
W0805 08:05:41.938484       7 client_config.go:614] Neither --kubeconfig nor --master was specified.  Using the inClusterConfig.  This might not work.
I0805 08:05:41.938844       7 main.go:241] "Creating API client" host="https://10.96.0.1:443"
W0805 08:05:47.155687       7 main.go:282] Initial connection to the Kubernetes API server was retried 3 times.
I0805 08:05:47.155736       7 main.go:285] "Running in Kubernetes cluster" major="1" minor="20" git="v1.20.8" state="clean" commit="50317190d44dbdb51ae7ff430917b32ba96188b5" platform="linux/amd64"
I0805 08:05:47.165280       7 main.go:87] "Valid default backend" service="ingress-nginx/ingress-controller-ingress-nginx-defaultbackend"
I0805 08:05:47.365788       7 main.go:105] "SSL fake certificate created" file="/etc/ingress-controller/ssl/default-fake-certificate.pem"
I0805 08:05:47.369423       7 main.go:115] "Enabling new Ingress features available since Kubernetes v1.18"
W0805 08:05:47.377362       7 main.go:127] No IngressClass resource with name nginx found. Only annotation will be used.
I0805 08:05:47.422509       7 nginx.go:254] "Starting NGINX Ingress controller"
I0805 08:05:47.441234       7 event.go:282] Event(v1.ObjectReference{Kind:"ConfigMap", Namespace:"ingress-nginx", Name:"ingress-controller-ingress-nginx-controller", UID:"41825dc5-dbbd-41b9-9b7f-7d7e6c8a036f", APIVersion:"v1", ResourceVersion:"3050", FieldPath:""}): type: 'Normal' reason: 'CREATE' ConfigMap ingress-nginx/ingress-controller-ingress-nginx-controller
I0805 08:05:48.623053       7 nginx.go:296] "Starting NGINX process"
I0805 08:05:48.623118       7 leaderelection.go:243] attempting to acquire leader lease ingress-nginx/ingress-controller-leader-nginx...
I0805 08:05:48.623746       7 controller.go:146] "Configuration changes detected, backend reload required"
I0805 08:05:48.654774       7 leaderelection.go:253] successfully acquired lease ingress-nginx/ingress-controller-leader-nginx
I0805 08:05:48.654816       7 status.go:84] "New leader elected" identity="ingress-controller-ingress-nginx-controller-6d798895b8-zpt6q"
I0805 08:05:48.684408       7 controller.go:163] "Backend successfully reloaded"
I0805 08:05:48.684517       7 controller.go:174] "Initial sync, sleeping for 1 second"
I0805 08:05:48.684598       7 event.go:282] Event(v1.ObjectReference{Kind:"Pod", Namespace:"ingress-nginx", Name:"ingress-controller-ingress-nginx-controller-6d798895b8-zpt6q", UID:"9724b6cb-c946-4640-9359-6e6b83ed10f9", APIVersion:"v1", ResourceVersion:"3288", FieldPath:""}): type: 'Normal' reason: 'RELOAD' NGINX reload triggered due to a change in configuration
==== END logs for container controller of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6d798895b8-zpt6q ====
==== START logs for container istio-proxy of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6d798895b8-zpt6q ====
2021-08-05T08:05:42.170719Z	info	FLAG: --concurrency="2"
2021-08-05T08:05:42.170756Z	info	FLAG: --disableInternalTelemetry="false"
2021-08-05T08:05:42.170763Z	info	FLAG: --domain="ingress-nginx.svc.cluster.local"
2021-08-05T08:05:42.170767Z	info	FLAG: --help="false"
2021-08-05T08:05:42.170770Z	info	FLAG: --id=""
2021-08-05T08:05:42.170773Z	info	FLAG: --ip=""
2021-08-05T08:05:42.170777Z	info	FLAG: --log_as_json="false"
2021-08-05T08:05:42.170780Z	info	FLAG: --log_caller=""
2021-08-05T08:05:42.170783Z	info	FLAG: --log_output_level="default:info"
2021-08-05T08:05:42.170786Z	info	FLAG: --log_rotate=""
2021-08-05T08:05:42.170790Z	info	FLAG: --log_rotate_max_age="30"
2021-08-05T08:05:42.170794Z	info	FLAG: --log_rotate_max_backups="1000"
2021-08-05T08:05:42.170797Z	info	FLAG: --log_rotate_max_size="104857600"
2021-08-05T08:05:42.170801Z	info	FLAG: --log_stacktrace_level="default:none"
2021-08-05T08:05:42.170807Z	info	FLAG: --log_target="[stdout]"
2021-08-05T08:05:42.170811Z	info	FLAG: --meshConfig="./etc/istio/config/mesh"
2021-08-05T08:05:42.170814Z	info	FLAG: --mixerIdentity=""
2021-08-05T08:05:42.170817Z	info	FLAG: --outlierLogPath=""
2021-08-05T08:05:42.170820Z	info	FLAG: --proxyComponentLogLevel="misc:error"
2021-08-05T08:05:42.170824Z	info	FLAG: --proxyLogLevel="warning"
2021-08-05T08:05:42.170828Z	info	FLAG: --serviceCluster="ingress-controller-ingress-nginx-controller.ingress-nginx"
2021-08-05T08:05:42.170831Z	info	FLAG: --serviceregistry="Kubernetes"
2021-08-05T08:05:42.170835Z	info	FLAG: --stsPort="0"
2021-08-05T08:05:42.170838Z	info	FLAG: --templateFile=""
2021-08-05T08:05:42.170841Z	info	FLAG: --tokenManagerPlugin="GoogleTokenExchange"
2021-08-05T08:05:42.170844Z	info	FLAG: --trust-domain="cluster.local"
2021-08-05T08:05:42.170873Z	info	Version 1.7.3-16752a61bc5f95e8fa8c1e439d2c7271c54fa5a1-dirty-Modified
2021-08-05T08:05:42.171306Z	info	Obtained private IP [10.244.0.6 fe80::d4bc:beff:fed2:db9e]
2021-08-05T08:05:42.171398Z	info	Apply proxy config from env {"proxyMetadata":{"DNS_AGENT":""}}

2021-08-05T08:05:42.172549Z	info	Effective config: binaryPath: /usr/local/bin/envoy
concurrency: 2
configPath: ./etc/istio/proxy
controlPlaneAuthPolicy: MUTUAL_TLS
discoveryAddress: istiod.istio-system.svc:15012
drainDuration: 45s
envoyAccessLogService: {}
envoyMetricsService: {}
parentShutdownDuration: 60s
proxyAdminPort: 15000
proxyMetadata:
  DNS_AGENT: ""
serviceCluster: ingress-controller-ingress-nginx-controller.ingress-nginx
statNameLength: 189
statusPort: 15020
terminationDrainDuration: 5s
tracing:
  zipkin:
    address: zipkin.istio-system:9411

2021-08-05T08:05:42.172604Z	info	Proxy role: &model.Proxy{Type:"sidecar", IPAddresses:[]string{"10.244.0.6", "fe80::d4bc:beff:fed2:db9e"}, ID:"ingress-controller-ingress-nginx-controller-6d798895b8-zpt6q.ingress-nginx", Locality:(*envoy_config_core_v3.Locality)(nil), DNSDomain:"ingress-nginx.svc.cluster.local", ConfigNamespace:"", Metadata:(*model.NodeMetadata)(nil), SidecarScope:(*model.SidecarScope)(nil), PrevSidecarScope:(*model.SidecarScope)(nil), MergedGateway:(*model.MergedGateway)(nil), S [...]
2021-08-05T08:05:42.172609Z	info	JWT policy is third-party-jwt
2021-08-05T08:05:42.172651Z	info	PilotSAN []string{"istiod.istio-system.svc"}
2021-08-05T08:05:42.172665Z	info	MixerSAN []string{"spiffe://cluster.local/ns/istio-system/sa/istio-mixer-service-account"}
2021-08-05T08:05:42.172708Z	info	sa.serverOptions.CAEndpoint == istiod.istio-system.svc:15012
2021-08-05T08:05:42.172730Z	info	Using user-configured CA istiod.istio-system.svc:15012
2021-08-05T08:05:42.172737Z	info	istiod uses self-issued certificate
2021-08-05T08:05:42.172785Z	info	the CA cert of istiod is: -----BEGIN CERTIFICATE-----
MIIFeDCCA2CgAwIBAgIJAKjClE3fE5vSMA0GCSqGSIb3DQEBCwUAMEkxCzAJBgNV
[...]
4hGRnrOMyx6JXuGQ
-----END CERTIFICATE-----

2021-08-05T08:05:42.196864Z	info	sds	SDS gRPC server for workload UDS starts, listening on "./etc/istio/proxy/SDS" 

2021-08-05T08:05:42.196972Z	info	sds	Start SDS grpc server
2021-08-05T08:05:42.197071Z	info	Starting proxy agent
2021-08-05T08:05:42.197184Z	info	Received new config, creating new Envoy epoch 0
2021-08-05T08:05:42.197218Z	info	Epoch 0 starting
2021-08-05T08:05:42.197260Z	info	Opening status port 15020

2021-08-05T08:05:42.201798Z	info	Envoy command: [-c etc/istio/proxy/envoy-rev0.json --restart-epoch 0 --drain-time-s 45 --parent-shutdown-time-s 60 --service-cluster ingress-controller-ingress-nginx-controller.ingress-nginx --service-node sidecar~10.244.0.6~ingress-controller-ingress-nginx-controller-6d798895b8-zpt6q.ingress-nginx~ingress-nginx.svc.cluster.local --local-address-ip-version v4 --log-format-prefix-with-location 0 --log-format %Y-%m-%dT%T.%fZ	%l	envoy %n	%v -l warning --component-lo [...]
2021-08-05T08:05:42.812367Z	warning	envoy runtime	Unable to use runtime singleton for feature envoy.reloadable_features.activate_fds_next_event_loop
2021-08-05T08:05:43.107440Z	warning	envoy config	StreamAggregatedResources gRPC config stream closed: 14, no healthy upstream
2021-08-05T08:05:43.107521Z	warning	envoy config	Unable to establish new stream
2021-08-05T08:05:43.184026Z	info	sds	resource:default new connection
2021-08-05T08:05:43.184114Z	info	sds	Skipping waiting for gateway secret
2021-08-05T08:05:43.407332Z	warning	envoy config	StreamAggregatedResources gRPC config stream closed: 14, no healthy upstream
2021-08-05T08:05:43.407421Z	warning	envoy config	Unable to establish new stream
2021-08-05T08:05:43.723357Z	info	cache	Root cert has changed, start rotating root cert for SDS clients
2021-08-05T08:05:43.723405Z	info	cache	GenerateSecret default
2021-08-05T08:05:43.723849Z	info	sds	resource:default pushed key/cert pair to proxy
2021-08-05T08:05:43.741261Z	warning	envoy main	there is no configured limit to the number of allowed active connections. Set a limit via the runtime key overload.global_downstream_max_connections
2021-08-05T08:05:45.484924Z	info	sds	resource:ROOTCA new connection
2021-08-05T08:05:45.485029Z	info	sds	Skipping waiting for gateway secret
2021-08-05T08:05:45.485072Z	info	cache	Loaded root cert from certificate ROOTCA
2021-08-05T08:05:45.485407Z	info	sds	resource:ROOTCA pushed root cert to proxy
2021-08-05T08:05:47.714539Z	info	Envoy proxy is ready
==== END logs for container istio-proxy of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6d798895b8-zpt6q ====
